@@ -205,7 +205,7 @@ int command_wimpy(object *op, char *params);
 int command_brace(object *op, char *params);
 int command_style_map_info(object *op, char *params);
 int command_kill_pets(object *op, char *params);
-int command_quests(object *op, char *params);
+int command_quests(object *pl, char *params);
 /* c_move.c */
 int command_east(object *op, char *params);
 int command_north(object *op, char *params);
@@ -507,10 +507,14 @@ void control_golem(object *op, int dir);
 int summon_golem(object *op, object *caster, int dir, object *spob);
 object *choose_cult_monster(object *pl, object *god, int summon_level);
 int summon_object(object *op, object *caster, object *spell_ob, int dir);
+object *get_real_owner(object *ob);
+int should_arena_attack(object *pet, object *owner, object *target);
 /* player.c */
 player *find_player(char *plname);
 player *find_player_partial_name(char *plname);
 void display_motd(object *op);
+void send_rules(object *op);
+void send_news(object *op);
 int playername_ok(char *cp);
 int add_player(NewSocket *ns);
 archetype *get_player_archetype(archetype *at);
@@ -535,7 +539,7 @@ int check_pick(object *op);
 object *find_arrow(object *op, char *type);
 object *find_better_arrow(object *op, object *target, char *type, int *better);
 object *pick_arrow_target(object *op, char *type, int dir);
-int fire_bow(object *op, object *part, object *arrow, int dir, int wc_mod, int sx, int sy);
+int fire_bow(object *op, object *part, object *arrow, int dir, int wc_mod, sint16 sx, sint16 sy);
 int player_fire_bow(object *op, int dir);
 void fire_misc_object(object *op, int dir);
 void fire(object *op, int dir);
@@ -566,8 +570,8 @@ CommArray_s *find_plugin_command(char *cmd, object *op);
 void displayPluginsList(object *op);
 int findPlugin(char *id);
 int initPlugins(void);
-int removeOnePlugin(char *id);
 int initOnePlugin(char *pluginfile);
+int removeOnePlugin(char *id);
 CFParm *CFWLog(CFParm *PParm);
 CFParm *CFWNewInfoMap(CFParm *PParm);
 CFParm *CFWSpringTrap(CFParm *PParm);
@@ -629,20 +633,20 @@ CFParm *CFWObjectCreateClone(CFParm *PParm);
 CFParm *CFWSetVariable(CFParm *PParm);
 CFParm *CFWDecreaseObjectNR(CFParm *PParm);
 CFParm *CFWTeleportObject(CFParm *PParm);
-CFParm* CFWCheckTrigger(CFParm* PParm);
-CFParm* CFWOutOfMap(CFParm* PParm);
-CFParm* CFWQueryName(CFParm* PParm);
-CFParm* CFWQueryBaseName(CFParm* PParm);
-CFParm* CFWInsertObInOb(CFParm* PParm);
-CFParm* CFWGetSettings(CFParm* PParm);
-CFParm* CFWGetMapFlags(CFParm* PParm);
-CFParm* CFWReCmp(CFParm* PParm);
-CFParm* CFWStrdupLocal(CFParm* PParm);
-CFParm* CFWCreatePathname(CFParm* PParm);
-CFParm* CFWUpdateObSpeed(CFParm* PParm);
-CFParm* CFWPresentArchByName(CFParm* PParm);
-CFParm* CFWPresentArchNameInOb(CFParm* PParm);
-CFParm* CFWSetDirection(CFParm* PParm);
+CFParm *CFWCheckTrigger(CFParm *PParm);
+CFParm *CFWOutOfMap(CFParm *PParm);
+CFParm *CFWQueryName(CFParm *PParm);
+CFParm *CFWQueryBaseName(CFParm *PParm);
+CFParm *CFWInsertObInOb(CFParm *PParm);
+CFParm *CFWGetSettings(CFParm *PParm);
+CFParm *CFWGetMapFlags(CFParm *PParm);
+CFParm *CFWReCmp(CFParm *PParm);
+CFParm *CFWStrdupLocal(CFParm *PParm);
+CFParm *CFWCreatePathname(CFParm *PParm);
+CFParm *CFWUpdateObSpeed(CFParm *PParm);
+CFParm *CFWPresentArchByName(CFParm *PParm);
+CFParm *CFWPresentArchNameInOb(CFParm *PParm);
+CFParm *CFWSetDirection(CFParm *PParm);
 CFParm *RegisterGlobalEvent(CFParm *PParm);
 CFParm *UnregisterGlobalEvent(CFParm *PParm);
 void GlobalEvent(CFParm *PParm);
@@ -793,6 +797,7 @@ int summon_hostile_monsters(object *op, int n, char *monstername);
 void shuffle_attack(object *op, int change_face);
 void prayer_failure(object *op, int failure, int power);
 void spell_failure(object *op, int failure, int power, object *skill);
+int cast_party_spell(object *op, object *caster, int dir, object *spell_ob, char *stringarg);
 int cast_spell(object *op, object *caster, int dir, object *spell_ob, char *stringarg);
 void move_spell_effect(object *op);
 void check_spell_effect(object *op);
